feat: add docker compose

--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "start": "ts-node index",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Caio Cavalcanti",
