--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,11 @@
   "author": "Caio Cavalcanti",
   "license": "ISC",
   "dependencies": {
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.56.1",
+    "@opentelemetry/sdk-metrics": "^1.30.1",
+    "@opentelemetry/sdk-node": "^0.57.2",
+    "@opentelemetry/sdk-trace-node": "^1.30.1",
     "@prisma/client": "^6.3.0",
     "@types/express": "^5.0.0",
     "cors": "^2.8.5"
