--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,32 @@ services:
     depends_on:
       mysql:
         condition: service_healthy
-    command: ["npm", "start"]  
+    command: ["npm", "start"]
+
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    container_name: jaeger
+    ports:
+      - "8081:16686"  # Jaeger UI
+      - "14268"
+      - "14250"
+
+  otel-collector:
+    image: otel/opentelemetry-collector:latest
+    container_name: otel-collector
+    command: ["--config=/etc/otel-collector-config.yml"]
+    volumes:
+      - ./app/otel-collector-config.yml:/etc/otel-collector-config.yml
+    ports:
+      - "1888:1888"   # pprof extension
+      - "13133:13133" # health_check extension
+      - "4317:4317"   # OTLP gRPC receiver
+      - "4318:4318"   # HTTP receiver
+      - "60001:55679" # zpages extension
+    depends_on:
+      - jaeger
+    links:
+      - jaeger
+
 volumes:
   mysql_data:
