--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "description": "backend baseado no teste de aplicacao elven works",
   "main": "index.js",
   "devDependencies": {
+    "@types/dotenv": "^8.2.3",
     "express": "^4.21.2",
     "prisma": "^6.3.0",
     "ts-node": "^10.9.2",
@@ -24,6 +25,8 @@
     "@opentelemetry/sdk-trace-node": "^1.30.1",
     "@prisma/client": "^6.3.0",
     "@types/express": "^5.0.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "dotenv-expand": "^12.0.1"
   }
 }
