--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+# version: '3.8'
 
 services:
   mysql:
@@ -54,11 +54,14 @@ services:
       - "13133:13133" # health_check extension
       - "4317:4317"   # OTLP gRPC receiver
       - "4318:4318"   # HTTP receiver
+      - "9464:9464"    # Porta para o exporter Prometheus
       - "60001:55679" # zpages extension
     depends_on:
       - jaeger
     links:
       - jaeger
+    
+      
 
 volumes:
   mysql_data:
